[package]
name = "concord-agent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
tracing = "*"
tracing-subscriber = "*"
url = "*"
