[package]
name = "concord-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async_zip = { version = "0", features = ["tokio", "deflate"] }
async-tempfile = "0"
bollard = "0"
bytes = "1"
concord-client = { path = "../concord-client-rs" }
dotenvy = "0"
futures-util = "0"
http = "1"
k8s-openapi = { version = "0", features = ["latest"] }
kube = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0"
tokio-util = { version = "0", features = ["compat", "rt"] }
tracing = "0"
tracing-subscriber = "0"
url = "2"
uuid = { version = "1", features = ["serde"] }
walkdir = "2"

[profile.release]
strip = true
debug = false
